<resources>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="ok">OK</string>
    <string name="setup_info">Please choose your master password. While no limit is put on what you can enter here, it is strongly advised that your password has at least 12 characters and contains lowercase and uppercase letters, digits and special symbols (!?/$%#). If your password is not secure enough then your photos/videos may be vulnerable to brute force attacks.</string>
    <string name="confirm_password">Confirm password</string>
    <string name="password_not_match">Passwords don\'t match. Please enter the same password twice correctly.</string>
    <string name="password_empty">Password can\'t be empty.</string>
    <string name="incorrect_password">Incorrect password</string>
    <string name="settings">Settings</string>
    <string name="deleting_files">Deleting file(s)…</string>
    <string name="trashing_files">Moving file(s) to trash…</string>
    <string name="deleting_album">Deleting album…</string>
    <string name="decrypting_files">Decrypting file(s)…</string>
    <string name="encrypting_files">Encrypting file(s)…</string>
    <string name="encrypting_video">Encrypting video…</string>
    <string name="confirm_delete_files">Do you really want to delete %s files?</string>
    <string name="confirm_trash_files">Do you really want to move %s files to trash?</string>
    <string name="confirm_delete_album">Do you really want to delete album %s? All files in this album will be moved to trash.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete">Delete</string>
    <string name="change_password">Change Password</string>
    <string name="changing_password">Changing account password…</string>
    <string name="success_change_pass">Password has been successfully changed</string>
    <string name="import_btn">Import</string>
    <string name="importing_files">Importing files…</string>
    <string name="lock_time">Lock up the app after</string>
    <string name="lock_time_desc">Lock app if inactive for specified amount of time</string>
    <string name="seconds5">5 seconds</string>
    <string name="seconds10">10 seconds</string>
    <string name="seconds15">15 seconds</string>
    <string name="seconds20">20 seconds</string>
    <string name="seconds30">30 seconds</string>
    <string name="minute1">1 minute</string>
    <string name="minutes5">5 minutes</string>
    <string name="minutes10">10 minutes</string>
    <string name="minutes30">30 minutes</string>
    <string name="hour1">1 hour</string>
    <string name="share">Share</string>
    <string name="log_out">Log Out</string>
    <string name="gallery">Gallery</string>
    <string name="volume_take_photo">Volume Up/Down</string>
    <string name="volume_take_photo_desc">Volume Up/Down takes picture</string>
    <string name="timer_duration">Timer Duration</string>
    <string name="timer_duartion_desc">Camera Timer Duration</string>
    <string name="password_short">Password have to be at least %s characters long</string>
    <string name="flash">Flash</string>
    <string name="timer">Timer</string>
    <string name="sign_up">Sign Up</string>
    <string name="bottom_text">https://stingle.org</string>
    <string name="clear_cache">Clear cache</string>
    <string name="clear_cache_desc">Clear thumbnail cache</string>
    <string name="confirm_delete_cache">Are you sure you want to delete cache?</string>
    <string name="title_gallery_for_app">Gallery</string>
    <string name="title_setup">Set Up</string>
    <string name="title_change_password">Change Password</string>
    <string name="title_import">Import</string>
    <string name="options">Options</string>
    <string name="rotating">Rotating…</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="internal_sd_card">"Internal SD card"</string>
    <string name="external_sd_card">"External SD card"</string>
    <string name="read_only">"Read Only"</string>
    <string name="home_folder_problem_title">"Problem with StinglePhotos folder"</string>
    <string name="please_enter_password">"Please enter password"</string>
    <string name="app_locked">"Stingle Photos is locked"</string>
    <string name="use_fingerprint">"Fingerprint authentication"</string>
    <string name="use_fingerprint_desc">"Use your fingerprint instead of entering password"</string>
    <string name="error_fingerprint_perm">"Please enable the fingerprint permission"</string>
    <string name="error_fingerprint_enroll">"No fingerprint configured. Please register at least one fingerprint in your device's Settings"</string>
    <string name="error_fingerprint_screenguard">"Please enable lockscreen security in your device's Settings"</string>
    <string name="use_password">"Use password"</string>
    <string name="fingerprint_auth_error">"Authentication error\n%s"</string>
    <string name="fingerprint_auth_failed">"Authentication failed"</string>
    <string name="fingerprint_auth_success">"Success!"</string>
    <string name="fingerprint_auth_help">"Authentication help\n%s"</string>
    <string name="enter_password_desc">"Please enter your password to unlock"</string>
    <string name="other">"Other"</string>
    <string name="cancel">Cancel</string>
    <string name="change">Change</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="sdcard_perm_explain">Stingle Photos requires access to SD card in order to show and create photos. Please allow access to continue.</string>
    <string name="camera_perm_explain">Stingle Photos requires access to camera in order to take photos. Please allow access to continue.</string>
    <string name="shutter_sound">Camera shutter sound</string>
    <string name="shutter_sound_desc">Play sound when taking photos</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_header_security">Security</string>
    <string name="pref_header_camera">Camera</string>
    <string name="photo">Photo</string>
    <string name="video">Video</string>
    <string name="back_camera_photo_res">Back camera photo resolution</string>
    <string name="back_camera_video_res">Back camera video resolution</string>
    <string name="front_camera_photo_res">Front camera photo resolution</string>
    <string name="front_camera_video_res">Front camera video resolution</string>
    <string name="megapixels">megapixels</string>
    <string name="fps">fps</string>
    <string name="email">Email</string>
    <string name="invalid_email">Invalid email address specified</string>
    <string name="fail_reg">Something went wrong, please try again.</string>
    <string name="creating_account">Creating account…</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_gallery">Gallery</string>
    <string name="save_to_gallery">Save to gallery</string>
    <string name="menu_trash">Trash</string>
    <string name="title_trash">Trash</string>
    <string name="restore">Restore</string>
    <string name="restoring_files">Restoring file(s)</string>
    <string name="move_to_trash">Move to Trash</string>
    <string name="sign_in">Sign In</string>
    <string name="signing_in">Signing in…</string>
    <string name="fail_login">Something went wrong during login, please try again.</string>
    <string name="create_account">Create an account</string>
    <string name="uploading_file">"Uploading file %1$s out of %2$s"</string>
    <string name="refreshing">Refreshing…</string>
    <string name="backup_complete">Backup/Sync complete</string>
    <string name="logging_out">Logging out…</string>
    <string name="confirm_logout">Are you sure you want to log out?</string>
    <string name="lock">Lock</string>
    <string name="resync_db_desc">Resync database with filesystem</string>
    <string name="resync_db">Resync database</string>
    <string name="website_link">Official Website</string>
    <string name="block_screenshots">Disallow screenshots of this app</string>
    <string name="enable_backup">Enable backup</string>
    <string name="enable_backup_desc">Backup your photos and videos to the cloud as soon as you take or import them</string>
    <string name="pref_header_sync">Backup</string>
    <string name="upload_only_on_wifi">Backup only on Wifi</string>
    <string name="upload_only_on_wifi_desc">Backup only when you are connected to Wifi network</string>
    <string name="upload_battery">Don\'t backup if battery is below</string>
    <string name="upload_battery_summary">%s%%</string>
    <string name="have_an_account">Already have an account?</string>
    <string name="menu_storage">Storage</string>
    <string name="biometric_auth">Biometric authentication</string>
    <string name="biometric_auth_desc">Use biometrics to unlock Stingle Photos</string>
    <string name="backup_phrase_enter_desc">Please enter your 24 word recovery phrase</string>
    <string name="recovery_desc">Please enter your email address and your recovery phrase. If correct you will be able to set a new password for your account.</string>
    <string name="check">Check</string>
    <string name="backup_phrase">Backup phrase</string>
    <string name="backup_key">Backup my keys</string>
    <string name="authentication">Authentication</string>
    <string name="locking">App access</string>
    <string name="advanced">Advanced</string>
    <string name="add_to_album">Add to album</string>
    <string name="add_or_move">Add or move</string>
    <string name="delete_album">Delete album</string>
    <string name="share_via_stingle">Share via Stingle Photos</string>
    <string name="share_to_apps">Share to other apps</string>
    <string name="album_settings">Album settings</string>
    <string name="rename_album">Rename album</string>
    <string name="album_info">Album info</string>
    <string name="leave_album">Leave album</string>
    <string name="delete_cache">Delete cache</string>
    <string name="delete_cache_desc">Clears cache of thumbnails and other temporary data</string>
    <string name="enable_import">Enable auto import</string>
    <string name="enable_import_desc">Automatically import photos and videos from your device</string>
    <string name="import_autodelete">Delete original files after import</string>
    <string name="import_autodelete_desc">Delete original files from the device after successful import</string>
    <string name="import_from">Import from</string>
    <string name="free_up_space">Free up space</string>
    <string name="set_album_blank_cover">Set a blank album cover</string>
    <string name="reset_album_cover">Reset album cover</string>
    <string name="preserve_import_dates">Preserve dates on import</string>
    <string name="preserve_import_dates_desc">Preserve dates of photos and videos during manual import</string>
    <string name="download_selected">Download selected</string>
    <string name="cache_size">Maximum cache size</string>
    <string name="download_missing_thumbs">Download missing thumbnails</string>
    <string name="download_missing_thumbs_desc">Download thumbnails that are not present in your local cache</string>
    <string name="dont_auth">Do not require password to unlock the app (DANGEROUS!!!)</string>
    <string name="dont_auth_desc">This will ruin ALL local security protections, but will add convenience. Other apps or forensic tools will be able to get your encryption keys. Use it at your own risk!</string>
</resources>