<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreference
        app:icon="@drawable/ic_save_alt"
        app:defaultValue="true"
        app:key="preserve_import_dates"
        app:summary="@string/preserve_import_dates_desc"
        app:title="@string/preserve_import_dates" />

    <Preference
        app:icon="@drawable/ic_refresh_red"
        app:key="resync_db"
        app:summary="@string/resync_db_desc"
        app:title="@string/resync_db" />

    <ListPreference
        app:icon="@drawable/ic_cached"
        app:key="cache_size"
        app:title="@string/cache_size"
        app:defaultValue="0"
        app:entries="@array/cacheSizes"
        app:entryValues="@array/cacheSizesValues"
        app:useSimpleSummaryProvider="true" />

    <Preference
        app:icon="@drawable/ic_image"
        app:key="download_thumbs"
        app:summary="@string/download_missing_thumbs_desc"
        app:title="@string/download_missing_thumbs" />

    <Preference
        app:icon="@drawable/ic_action_delete"
        app:key="delete_cache"
        app:summary="@string/delete_cache_desc"
        app:title="@string/delete_cache" />

    <!--<Preference
        app:key="clear_cache"
        app:summary="@string/clear_cache_desc"
        app:title="@string/clear_cache" />-->

</PreferenceScreen>
