<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/locking">
        <ListPreference
            app:icon="@drawable/ic_time_red"
            app:defaultValue="60"
            app:entries="@array/lockTimes"
            app:entryValues="@array/lockTimesValues"
            app:key="lock_time"
            app:useSimpleSummaryProvider="true"
            app:title="@string/lock_time" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/authentication">

        <SwitchPreference
            app:icon="@drawable/ic_fingerprint_red"
            app:defaultValue="false"
            app:key="biometrics"
            app:summary="@string/biometric_auth_desc"
            app:title="@string/biometric_auth"
            app:disableDependentsState="true" />

        <SwitchPreference
            app:icon="@drawable/ic_baseline_close_24"
            app:defaultValue="false"
            app:key="dont_auth"
            app:title="@string/dont_auth"
            app:summary="@string/dont_auth_desc"
            app:dependency="biometrics"
            />


    </PreferenceCategory>

    <PreferenceCategory android:title="@string/other">
        <SwitchPreference
            app:icon="@drawable/ic_screen_lock_red"
            app:defaultValue="false"
            app:key="block_screenshots"
            app:title="@string/block_screenshots" />
    </PreferenceCategory>
</PreferenceScreen>
