<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_trash"
            android:icon="@drawable/ic_menu_trash"
            android:title="@string/menu_trash" />
        <item
            android:id="@+id/nav_storage"
            android:icon="@drawable/ic_storage"
            android:title="@string/menu_storage"
            android:visible="false"/>
        <item
            android:id="@+id/nav_backup"
            android:icon="@drawable/ic_lock_solid"
            android:title="@string/backup_phrase" />
        <item
            android:id="@+id/nav_free_up_space"
            android:icon="@drawable/ic_smartphone"
            android:title="@string/free_up_space" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_website"
            android:icon="@drawable/ic_home"
            android:title="@string/website_link" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/log_out" />
    </group>

    <!--<item>
        <menu>

        </menu>
    </item>-->

</menu>
