<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/share"
        android:icon="@drawable/ic_action_share"
        android:title="@string/share"
        app:showAsAction="always|withText">
        <menu>
            <item
                android:id="@+id/share_stingle"
                android:title="@string/share_via_stingle" />
            <item
                android:id="@+id/share_to_apps"
                android:title="@string/share_to_apps" />
        </menu>
    </item>
    <item
        android:id="@+id/add_to_album"
        android:icon="@drawable/ic_action_move"
        android:title="@string/add_to_album"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/decrypt"
        android:icon="@drawable/ic_save_alt"
        android:title="@string/save_to_gallery"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/trash"
        android:icon="@drawable/ic_action_delete"
        android:title="@string/move_to_trash"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/download"
        android:icon="@drawable/ic_cloud_download"
        android:title="@string/download_selected"
        app:showAsAction="never" />
</menu>