<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/share_album"
        android:icon="@drawable/ic_action_share"
        android:title="@string/share"
        app:showAsAction="always|withText" >
    </item>

    <item
        android:id="@+id/action_album_settings"
        android:orderInCategory="100"
        android:title="@string/album_settings"
        android:icon="@drawable/ic_settings"
        android:iconTint="?attr/colorControlNormal"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_album_info"
        android:orderInCategory="100"
        android:title="@string/album_info"
        android:icon="@drawable/ic_info"
        android:iconTint="?attr/colorControlNormal"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_rename_album"
        android:orderInCategory="100"
        android:title="@string/rename_album"
        android:icon="@drawable/ic_edit"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_set_blank_cover"
        android:orderInCategory="100"
        android:title="@string/set_album_blank_cover"
        android:icon="@drawable/ic_image"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_reset_cover"
        android:orderInCategory="100"
        android:title="@string/reset_album_cover"
        android:icon="@drawable/ic_image"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_leave_album"
        android:orderInCategory="100"
        android:title="@string/leave_album"
        android:icon="@drawable/ic_leave"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete_album"
        android:orderInCategory="100"
        android:title="@string/delete_album"
        android:icon="@drawable/ic_action_delete"
        app:showAsAction="never" />

</menu>
