<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/photo">

        <ListPreference
            app:key="back_photo_res"
            app:title="@string/back_camera_photo_res"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            app:key="front_photo_res"
            app:title="@string/front_camera_photo_res"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/video">

        <ListPreference
            app:key="back_video_res"
            app:title="@string/back_camera_video_res"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            app:key="front_video_res"
            app:title="@string/front_camera_video_res"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>
