<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="org.stingle.photos.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_info"
        android:title="@string/pref_header_general" />

    <header
        android:fragment="org.stingle.photos.SettingsActivity$SecurityPreferenceFragment"
        android:icon="@drawable/ic_security"
        android:title="@string/pref_header_security" />

    <header
        android:fragment="org.stingle.photos.SettingsActivity$SyncPreferenceFragment"
        android:icon="@drawable/ic_backup"
        android:title="@string/pref_header_sync" />

    <header
        android:fragment="org.stingle.photos.SettingsActivity$CameraPreferenceFragment"
        android:icon="@drawable/ic_camera"
        android:title="@string/pref_header_camera" />

</preference-headers>
