<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/share"
        android:icon="@drawable/ic_action_share"
        android:title="@string/share"
        app:showAsAction="always|withText" />
    <!--<item
        android:id="@+id/add_to_this_album"
        android:icon="@drawable/ic_action_add"
        android:title="@string/add_to_this_album"
        app:showAsAction="always|withText" />-->
    <item
        android:id="@+id/add_to_folder"
        android:icon="@drawable/ic_action_move"
        android:title="@string/add_or_move"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/decrypt"
        android:icon="@drawable/ic_action_unlock"
        android:title="@string/save_to_gallery"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/trash"
        android:icon="@drawable/ic_action_delete"
        android:title="@string/move_to_trash"
        app:showAsAction="always|withText" />
</menu>