<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">

		<TextView
			android:id="@+id/textView1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:paddingTop="20dp"
			android:layout_margin="10dp"
			android:text="@string/setup_info" />

		<EditText
			android:id="@+id/email"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_margin="10dp"
			android:hint="@string/email"
			android:inputType="textEmailAddress">

			<requestFocus />
		</EditText>

		<EditText
			android:id="@+id/password1"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:hint="@string/password"
			android:layout_margin="10dp"
			android:inputType="textPassword" >

		</EditText>

		<EditText
			android:id="@+id/password2"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:hint="@string/confirm_password"
			android:layout_margin="10dp"
			android:inputType="textPassword" />

		<LinearLayout
			android:id="@+id/advanced_opener"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="20dp"
			android:layout_marginBottom="20dp"
			android:layout_marginStart="10dp"
			android:orientation="horizontal"
			android:gravity="start">
			<ImageView
				android:id="@+id/advanced_arrow"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:src="@drawable/ic_arrow_drop_down_black"
				android:layout_marginEnd="5dp" />
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/advanced"
				android:textSize="16sp" />


		</LinearLayout>

		<LinearLayout
			android:id="@+id/advanced_container"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginStart="15dp"
			android:layout_marginBottom="20dp"
			android:orientation="horizontal"
			android:visibility="gone"
			android:gravity="start">

			<ImageView
				android:id="@+id/backup_keys_info"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:src="@drawable/ic_info"
				android:layout_gravity="center_vertical"
				android:layout_marginEnd="5dp"
				app:tint="?colorControlNormal" />

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/backup_key"
				android:textSize="16sp" />

			<com.google.android.material.switchmaterial.SwitchMaterial
				android:id="@+id/is_backup_keys"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:checked="true" />

		</LinearLayout>

		<Button
			android:id="@+id/signup"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:layout_marginLeft="32dp"
			android:layout_marginRight="32dp"
			android:text="@string/sign_up" />



		<LinearLayout
			android:id="@+id/sign_in_container"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="20dp"
			android:orientation="horizontal"
			android:gravity="center">
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:text="@string/have_an_account"
				android:textSize="16sp" />
			<Button
				android:id="@+id/loginBtn"
				style="@style/Widget.MaterialComponents.Button.TextButton"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/sign_in" />
		</LinearLayout>

	</LinearLayout>
</ScrollView>