<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_margin="10dp"
            android:text="@string/recovery_desc" />

        <EditText
            android:id="@+id/email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress" >
            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/backup_phrase"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="40dp"
            android:layout_margin="10dp"
            android:hint="@string/backup_phrase_enter_desc"
            android:inputType="textMultiLine"
            android:digits="abcdefghijklmnopqrstuvwxyz "/>

        <Button
            android:id="@+id/checkBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_gravity="center"
            android:text="@string/check" />


    </LinearLayout>
</ScrollView>
